--- a/index.html
+++ b/index.html
@@ -1,23 +1,85 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>Mobilní aplikace</title>
-        <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="style.css">
-    </head>
-    <body>
-        <div class="obal">
+  <head>
+    <meta charset="utf-8" />
+    <title>Mobilní aplikace</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" type="text/css" href="style.css" />
+  </head>
+  <body>
+    <div class="obal">
+      <ul class="menu">
+        <li>
+          <a href="#superappka"> <div class="superappka">Super Appka</div></a>
+        </li>
+        <li><a href="#design">Úžasný design</a></li>
+        <li><a href="#funkce">Boží funkce</a></li>
+        <li><a href="#zdarma">Zdarma ke stažení</a></li>
+      </ul>
+      <div class="hlavicka">
+        <div class="nazev">
+          <p>
+            Super Appka
+          </p>
+        </div>
 
-            <!-- tvoje HTML sem -->
+        <div class="appka">
+          <div class="slogan">
+            <p>
+              Úžasná mobilní aplikace, <br />
+              která Ti změní život.
+            </p>
+          </div>
+          <div class="akce">
+            <a class="tlacitko1" href="#">Stáhnout zdarma</a>
 
-            Ajajaj, tento týden tu nic není, je to zcela na tobě :)
+            <a class="tlacitko2" href="#">Více informací</a>
+          </div>
+        </div>
+      </div>
 
-            Zadání ve vysledek.png
+      <section class="informace">
+        <div class="cestuj">
+          <img src="images/letadlo.svg" alt="logo letadla" />
+          <h1>
+            Cestuj po světě
+          </h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi fugit
+            rerum, explicabo doloribus!
+          </p>
+        </div>
+        <div class="chatuj">
+          <img src="images/bubliny.svg" alt="logo bublin" />
+          <h1>
+            Chatuj s přáteli
+          </h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi fugit
+            rerum, explicabo doloribus!
+          </p>
+        </div>
 
+        <div class="zazij">
+          <img src="images/mapa.svg" alt="logo mapy" />
+          <h1>
+            Zažij dobrodružství
+          </h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi fugit
+            rerum, explicabo doloribus!
+          </p>
+        </div>
+      </section>
 
-
-
-        </div><!-- konec .obal -->
-    </body>
+      <footer class="paticka">
+        <p>
+          © 2016, Web od A do Z
+        </p>
+      </footer>
+    </div>
+  </body>
 </html>
